--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "@emailjs/browser": "^4.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
