--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 VITE_FIREBASE_APP_ID=your_app_id_here
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
+
+# EmailJS Configuration
+VITE_EMAILJS_SERVICE_ID=your_service_id_here
+VITE_EMAILJS_TEMPLATE_ID=your_template_id_here
+VITE_EMAILJS_PUBLIC_KEY=your_public_key_here
+
+# Stripe Configuration (optional)
+VITE_STRIPE_PUBLISHABLE_KEY=your_publishable_key_here
+STRIPE_SECRET_KEY=your_secret_key_here
