--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^2.4.0",
     "date-fns": "^4.1.0",
     "firebase": "^10.7.1",
+    "pnpm": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
