--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pnpm": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
